Added Share news option and UI enhancement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sandeep Broadcasting Company</string>
     <string name="content">content</string>
     <string name="news_img">News_Img</string>
+    <string name="share">share</string>
 </resources>
