Enhanced UI Added reload button to the Action Bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="content">content</string>
     <string name="news_img">News_Img</string>
     <string name="share">share</string>
+    <string name="reload">RELOAD</string>
+    <string name="sandeep_broadcasting_company">Sandeep Broadcasting Company</string>
 </resources>
