--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="share">share</string>
     <string name="reload">RELOAD</string>
     <string name="sandeep_broadcasting_company">Sandeep Broadcasting Company</string>
+    <string name="save">save</string>
+    <string name="todo">TODO</string>
 </resources>
